# bleqt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
gui/: CMakeLists.txt  bleFrame.cpp  bleFrame.hpp  bleapp.cpp  bleapp.hpp  dataWidget.cpp  dataWidget.hpp  gridSettsWidget.cpp  gridSettsWidget.hpp  main.cpp  modelDataWidget.cpp  modelDataWidget.hpp  physicDataWidget.cpp  physicDataWidget.hpp  resources.qrc  satSolverSettsWidget.cpp  satSolverSettsWidget.hpp  shockFrontSettsWidget.cpp  shockFrontSettsWidget.hpp
gui/frames/: qVerticalLabel.cpp  qVerticalLabel.hpp
gui/mvp/: blePresenter.cpp  blePresenter.hpp  iview.hpp
gui/services/: saveFilePathService.cpp  saveFilePathService.hpp
gui/utils/: qwidgetUtils.cpp  qwidgetUtils.hpp
gui/views/: bleFrame.cpp  bleFrame.hpp  ibleFrame.hpp  ui_bleFrame.hpp
gui/views/models/: settingsWidgetsDto.hpp  viewWidgetsDto.hpp
gui/views/presenters/: bleFramePresenter.cpp  bleFramePresenter.hpp
gui/widgets/: boundVisualWidget.cpp  boundVisualWidget.hpp  boundaryCondResultWidget.cpp  boundaryCondResultWidget.hpp  boundaryConditionsWidget.cpp  boundaryConditionsWidget.hpp  conditionsWidget.cpp  conditionsWidget.hpp  dataVisualWidget.hpp  dataWidget.cpp  dataWidget.hpp  dimlesParamsWidget.cpp  dimlesParamsWidget.hpp  fluidParamsGraphWidget.cpp  fluidParamsGraphWidget.hpp  fluidParamsVisualWidget.cpp  fluidParamsVisualWidget.hpp  fluidParamsWidget.cpp  fluidParamsWidget.hpp  fractShoreBoundaryWidget.cpp  fractShoreBoundaryWidget.hpp  fwVisualWidget.cpp  fwVisualWidget.hpp  geologyDataWidget.cpp  geologyDataWidget.hpp  geomDataWidget.cpp  geomDataWidget.hpp  gridSettsWidget.cpp  gridSettsWidget.hpp  modelDataWidget.cpp  modelDataWidget.hpp  physicDataWidget.cpp  physicDataWidget.hpp  relPermDataWidget.cpp  relPermDataWidget.hpp  resultDataVisualWidget.cpp  resultDataVisualWidget.hpp  resultDataWidget.cpp  resultDataWidget.hpp  satSolverSettsWidget.cpp  (+10 more)
gui/widgets/models/: boundModel.cpp  boundModel.hpp  boundaryComponents  boundaryCondResultModel.cpp  boundaryCondResultModel.hpp  componentsModel.hpp  dataComponents.hpp  dataWidgetComponentsDto.hpp  dimlessParamsDto.hpp  fluidParamsDto.hpp  fluidParamsModel.hpp  fwModel.cpp  fwModel.hpp  tauModel.cpp  tauModel.hpp  topBotBoundModel.cpp  topBotBoundModel.hpp  wellWorkParamsModel.cpp  wellWorkParamsModel.hpp
gui/widgets/presenters/: bleWidgetPresenter.cpp  bleWidgetPresenter.hpp  boundVisualWidgetPresenter.cpp  boundVisualWidgetPresenter.hpp  boundaryCondResultWidgetPresenter.cpp  boundaryCondResultWidgetPresenter.hpp  boundaryConditionsWidgetPresenter.cpp  boundaryConditionsWidgetPresenter.hpp  conditionsWidgetPresenter.cpp  conditionsWidgetPresenter.hpp  dataWidgetPresenter.cpp  dataWidgetPresenter.hpp  dimlesParamsWidgetPresenter.cpp  dimlesParamsWidgetPresenter.hpp  fluidParamGraphWidgetPresenter.cpp  fluidParamGraphWidgetPresenter.hpp  fluidParamWidgetPresenter.cpp  fluidParamWidgetPresenter.hpp  fwVisualWidgetPresenter.cpp  fwVisualWidgetPresenter.hpp  geologyDataWidgetPresenter.cpp  geologyDataWidgetPresenter.hpp  geomDataWidgetPresenter.cpp  geomDataWidgetPresenter.hpp  gridSettsWidgetPresenter.cpp  gridSettsWidgetPresenter.hpp  modelDataWidgetPresenter.cpp  modelDataWidgetPresenter.hpp  relPermDataWidgetPresenter.cpp  relPermDataWidgetPresenter.hpp  resultDataWidgetPresenter.cpp  resultDataWidgetPresenter.hpp  satSolverSettsWidgetPresenter.cpp  satSolverSettsWidgetPresenter.hpp  shockFrontSettsWidgetPresenter.cpp  shockFrontSettsWidgetPresenter.hpp  tauVisualWidgetPresenter.cpp  tauVisualWidgetPresenter.hpp  topBotBoundWidgetPresenter.cpp  topBotBoundWidgetPresenter.hpp  (+2 more)
gui/widgets/uis/: ui_boundVisualWidget.hpp  ui_boundaryCondResultWidget.hpp  ui_boundaryConditionsWidget.hpp  ui_conditionsWidget.hpp  ui_dataWidget.hpp  ui_dimlesParamsWidget.hpp  ui_fluidParamsVisualWidget.hpp  ui_fluidParamsWidget.hpp  ui_fractShoreBoundaryWidget.hpp  ui_fwVisualWidget.hpp  ui_geologyDataWidget.hpp  ui_geomDataWidget.hpp  ui_gridSettsWidget.hpp  ui_modelDataWidget.hpp  ui_modelDataWidget2.hpp  ui_physicDataWidget.hpp  ui_relPermDataWidget.hpp  ui_resultDataWidget.hpp  ui_satSolverSettsWidget.hpp  ui_schemeWidget.hpp  ui_shockFrontSettsWidget.hpp  ui_tauVisualWidget.hpp  ui_wellWorkDataWidget.hpp
src/: .inputData.hpp.swp  CMakeLists.txt  bleCalc.cpp  bleCalc.hpp  bleResultData.hpp  cell.hpp  commonMath.cpp  commonMath.hpp  commonVector.cpp  commonVector.hpp  diagMatrix.hpp  dynamicData.hpp  face.hpp  faceType.hpp  grid.hpp  gridData.hpp  gridType.hpp  inputData.cpp  inputData.hpp  makeGrid.cpp  makeGrid.hpp  mapInit.hpp  modelData.hpp  node.hpp  outputSettings.hpp  physData.hpp  pressureSolver.cpp  pressureSolver.hpp  saturSolver.cpp  saturSolver.hpp  saturSolverAnalytic.cpp  saturSolverAnalytic.hpp  saturSolverNum.cpp  saturSolverNum.hpp  saturSolverSettings.hpp  saturSolverType.hpp  shockFront.cpp  shockFront.hpp  test.cpp  test.hpp  (+10 more)
src/calc/models/: averFwSaveData.hpp  bleCalc.cpp  bleCalc.hpp  bleResultData.cpp  bleResultData.hpp  diagMatrix.hpp  saturSolverSettings.hpp  saturSolverType.hpp  suitStepDto.hpp
src/calc/services/: fieldDataSaver.cpp  fieldDataSaver.hpp  pressureSolver.cpp  pressureSolver.hpp  saturAverService.cpp  saturAverService.hpp  saturExplicitSolver.cpp  saturExplicitSolver.hpp  saturImplicitSolver.cpp  saturImplicitSolver.hpp  saturSolverAnalytic.cpp  saturSolverAnalytic.hpp  saturSolverNum.cpp  saturSolverNum.hpp  saturSolverShared.cpp  saturSolverShared.hpp  workParam.cpp  workParam.hpp  workSigma.cpp  workSigma.hpp  workTimeStep.cpp  workTimeStep.hpp
src/common/models/: boundCondData.cpp  boundCondData.hpp  boundCondType.hpp  boundSourceCond.hpp  data.hpp  dataDistribution.hpp  dataDistributionType.hpp  dynamicData.hpp  fwData.hpp  gridData.hpp  gridType.hpp  inputData.hpp  meshSettings.hpp  modelData.hpp  outputSettings.hpp  physData.hpp  rhsType.hpp  scaleData.hpp  shockFrontSettings.hpp  solverData.cpp  solverData.hpp  tauData.hpp  timeStepType.hpp  wellWorkParams.hpp
src/logging/: logger.cpp  logger.hpp
tests/: CMakeLists.txt  bleTests.cpp  main.cpp
(+91 files in other folders)
